--- a/AntonStockApp/res/layout/activity_reenter_products.xml
+++ b/AntonStockApp/res/layout/activity_reenter_products.xml
@@ -93,7 +93,7 @@
                                 android:layout_height="wrap_content"
                                 android:layout_weight="1"
                                 android:gravity="center_horizontal"
-                                android:text="@string/in_prod_alto"
+                                android:text="@string/in_prod_largo"
                                 android:textAppearance="?android:attr/textAppearanceSmall" />
 
                             <EditText
