--- a/AntonStockApp/res/layout/fragment_add_mp_action.xml
+++ b/AntonStockApp/res/layout/fragment_add_mp_action.xml
@@ -33,7 +33,7 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:gravity="center_horizontal"
-                        android:text="@string/add_oe_prod_alto"
+                        android:text="@string/add_oe_prod_largo"
                         android:textAppearance="?android:attr/textAppearanceSmall" />
 
                     <EditText
