--- a/AntonStockApp/res/values/strings_listitem.xml
+++ b/AntonStockApp/res/values/strings_listitem.xml
@@ -19,6 +19,8 @@
   	
   	<string name="listitem_emple_cargo_sd">Sin Datos</string>
   	<string name="listitem_emple_dept_sd">Sin Datos</string>
+  	<string name="listitem_unidades">Unidades</string>
+  	<string name="listitem_entregado">Entregador a </string>
   	
   	
     
