--- a/AntonStockApp/res/layout/fragment_add_product_insumo.xml
+++ b/AntonStockApp/res/layout/fragment_add_product_insumo.xml
@@ -27,12 +27,42 @@
 
             <Spinner
                 android:id="@+id/uomVal"
-                android:layout_width="200dp"
+                android:layout_width="300dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
                 android:layout_marginLeft="25dp" />
 
         </TableRow>
+
+<TableRow
+    android:id="@+id/tableRow1"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content" >
+
+    <TextView
+        android:id="@+id/TextView01"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="15dp"
+        android:layout_marginLeft="15dp"
+        android:layout_marginTop="10dp"
+        android:shadowColor="@color/abc_search_url_text_normal"
+        android:text="@string/lbl_prod_desc"
+        android:textSize="20sp" />
+
+    <EditText android:text=""
+        android:id="@+id/insuDesc"
+        android:lines="20"
+        android:minLines="5"
+        android:scrollHorizontally="false"
+        android:scrollbars="vertical"
+        android:singleLine="false"        
+        android:inputType="textMultiLine"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="25dp" />
+</TableRow>
+
     </TableLayout>
 
 </FrameLayout>
