--- a/AntonStockApp/res/layout/fragment_detail_mp.xml
+++ b/AntonStockApp/res/layout/fragment_detail_mp.xml
@@ -1,17 +1,23 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/RelativeLayout1"
+    android:id="@+id/LinearLayout1"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context="ar.com.antaresconsulting.antonstockapp.ProductDetailActivity" >
 
+    <RelativeLayout
+        android:id="@+id/RelativeLayout1"
+        android:layout_gravity="center_horizontal"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" >
+
         <TextView
             android:id="@+id/lblMaterial"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginRight="15dp"
             android:layout_marginBottom="15dp"
+            android:layout_marginRight="15dp"
             android:text="@string/lbl_prod_tipo_material"
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:textSize="25sp" />
@@ -20,9 +26,9 @@
             android:id="@+id/material"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_alignBaseline="@+id/lblMaterial"
+            android:layout_marginLeft="25dp"
             android:layout_toRightOf="@+id/lblMaterial"
-            android:layout_alignBaseline="@+id/lblMaterial"                        
-            android:layout_marginLeft="25dp"            
             android:text="Medium Text"
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:textSize="25sp" />
@@ -32,18 +38,18 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/lblMaterial"
+            android:layout_marginBottom="15dp"
             android:text="@string/lbl_prod_color"
-            android:layout_marginBottom="15dp"            
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:textSize="25sp" />
 
         <TextView
             android:id="@+id/color"
             android:layout_width="wrap_content"
-            android:layout_marginLeft="25dp"            
             android:layout_height="wrap_content"
+            android:layout_alignBaseline="@+id/lblColor"
             android:layout_below="@+id/lblMaterial"
-            android:layout_alignBaseline="@+id/lblColor"            
+            android:layout_marginLeft="25dp"
             android:layout_toRightOf="@+id/lblMaterial"
             android:text="Medium Text"
             android:textAppearance="?android:attr/textAppearanceMedium"
@@ -54,7 +60,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/lblColor"
-            android:layout_marginBottom="15dp"            
+            android:layout_marginBottom="15dp"
             android:text="@string/lbl_prod_acabado"
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:textSize="25sp" />
@@ -62,13 +68,45 @@
         <TextView
             android:id="@+id/acabado"
             android:layout_width="wrap_content"
-            android:layout_marginLeft="25dp"            
             android:layout_height="wrap_content"
+            android:layout_alignBaseline="@+id/lblAcab"
             android:layout_below="@+id/lblColor"
-            android:layout_alignBaseline="@+id/lblAcab"            
-            android:layout_toRightOf="@+id/lblMaterial"            
+            android:layout_marginLeft="25dp"
+            android:layout_toRightOf="@+id/lblMaterial"
             android:text="Medium Text"
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:textSize="25sp" />
+    </RelativeLayout>
 
-</RelativeLayout>
+    <TabHost
+        android:id="@android:id/tabhost"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content" >
+
+        <LinearLayout
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:orientation="vertical" >
+
+            <TabWidget
+                android:id="@android:id/tabs"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="0"
+                android:orientation="horizontal" />
+
+            <FrameLayout
+                android:id="@android:id/tabcontent"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:layout_weight="0" />
+
+            <android.support.v4.view.ViewPager
+                android:id="@+id/viewpager"
+                android:layout_width="fill_parent"
+                android:layout_height="0dp"
+                android:layout_weight="1" />
+        </LinearLayout>
+    </TabHost>
+
+</LinearLayout>
