--- a/AntonStockApp/res/layout/fragment_search_bacha.xml
+++ b/AntonStockApp/res/layout/fragment_search_bacha.xml
@@ -36,8 +36,7 @@
         <Spinner
             android:id="@+id/marca"
             android:layout_width="200dp"
-            android:layout_height="wrap_content"
-             >
+            android:layout_height="wrap_content" >
 
             <requestFocus />
         </Spinner>
@@ -45,11 +44,72 @@
         <Spinner
             android:id="@+id/tipoMaterial"
             android:layout_width="200dp"
-            android:layout_height="wrap_content"
-             />
+            android:layout_height="wrap_content" />
     </TableRow>
 
-<TableRow
+    <TableRow
+        android:id="@+id/TableRow02"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" >
+
+        <TextView
+            android:id="@+id/TextView01"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/search_bacha_acero"
+            android:textAppearance="?android:attr/textAppearanceSmall" />
+
+        <TextView
+            android:id="@+id/TextView03"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/search_bacha_colocacion"
+            android:textAppearance="?android:attr/textAppearanceSmall" />
+    </TableRow>
+
+    <TableRow
+        android:id="@+id/TableRow01"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="20dp" >
+
+        <Spinner
+            android:id="@+id/aceroBacha"
+            android:layout_width="200dp"
+            android:layout_height="wrap_content" />
+
+        <Spinner
+            android:id="@+id/colocacionBacha"
+            android:layout_width="200dp"
+            android:layout_height="wrap_content" />
+    </TableRow>
+    <TableRow
+        android:id="@+id/TableRow03"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" >
+
+        <TextView
+            android:id="@+id/TextView03"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/search_bacha_tipo"
+            android:textAppearance="?android:attr/textAppearanceSmall" />
+
+    </TableRow>
+
+    <TableRow
+        android:id="@+id/TableRow04"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="20dp" >
+
+        <Spinner
+            android:id="@+id/tipoBacha"
+            android:layout_width="200dp"
+            android:layout_height="wrap_content" />
+
+    </TableRow>
+    <TableRow
         android:id="@+id/tableRow5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" >
@@ -60,18 +120,21 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
             android:text="@string/search_nombre" />
-		<ProgressBar android:id="@+id/loading_spinner"
-        style="?android:progressBarStyle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_vertical" />
-        <AutoCompleteTextView android:text=""
+
+        <ProgressBar
+            android:id="@+id/loading_spinner"
+            style="?android:progressBarStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical" />
+
+        <AutoCompleteTextView
             android:id="@+id/nombreProd"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:visibility="gone"
-            android:ems="10" />
-
+            android:ems="10"
+            android:text=""
+            android:visibility="gone" />
     </TableRow>
 
 </TableLayout>
