--- a/AntonStockApp/res/values/strings_activity_in_products.xml
+++ b/AntonStockApp/res/values/strings_activity_in_products.xml
@@ -7,8 +7,8 @@
     <string name="in_prod_si">Si</string>
     <string name="in_prod_no">No</string>
     <string name="in_prod_proveedor">Proveedor</string>
-    <string name="in_prod_alto">Alto</string>
-    <string name="in_prod_ancho">Ancho</string>
+    <string name="in_prod_largo">Largo</string>
+    <string name="in_prod_ancho">Alto/Ancho</string>
     <string name="in_prod_unidad">m</string>
 	<string name="in_prod_espesor">Espesor</string>    
     <string name="in_prod_btn_mas_prod">Agregar</string>
