--- a/AntonStockApp/res/values/strings_activity_out_products.xml
+++ b/AntonStockApp/res/values/strings_activity_out_products.xml
@@ -2,8 +2,8 @@
     <string name="title_activity_out_products">Salida de Mercaderia</string>
     <string name="out_prod_disponibles">Productos Pedidos</string>
     <string name="out_prod_clientes">Cliente</string>
-    <string name="out_prod_alto">Alto</string>
-    <string name="out_prod_ancho">Ancho</string>
+    <string name="out_prod_largo">Largo</string>
+    <string name="out_prod_ancho">Alto/Ancho</string>
     <string name="out_prod_btn_mas_prod">Agregar</string>
     <string name="out_prod_btn_cerrar_pedido">Cerrar Pedido</string>
     <string name="out_prod_title_productos">Productos Salientes</string>
