--- a/AntonStockApp/res/layout/fragment_detail_bacha.xml
+++ b/AntonStockApp/res/layout/fragment_detail_bacha.xml
@@ -1,195 +1,220 @@
-<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/TableLayout1"
+    android:id="@+id/scrollData"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context="ar.com.antaresconsulting.antonstockapp.ProductDetailActivity" >
+    android:layout_height="match_parent" >
 
-    <TableRow
-        android:id="@+id/row3"
+    <TableLayout
+        android:id="@+id/TableLayout1"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" >
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:orientation="vertical"
+        tools:context="ar.com.antaresconsulting.antonstockapp.ProductDetailActivity" >
 
-        <TextView
-            android:id="@+id/lblMaterial"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="15dp"
-            android:layout_marginRight="15dp"
-            android:text="@string/lbl_prod_tipo_material"
-            android:textAppearance="?android:attr/textAppearanceMedium"
-            android:textSize="25sp" />
-
-        <TextView
-            android:id="@+id/material"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="25dp"
-            android:text=""
-            android:textAppearance="?android:attr/textAppearanceMedium"
-            android:textSize="25sp" />
-    </TableRow>
-
-    <TableRow
-        android:id="@+id/row4"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" >
-
-        <TextView
-            android:id="@+id/lblMarca"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="15dp"
-            android:text="@string/lbl_prod_marca"
-            android:textAppearance="?android:attr/textAppearanceMedium"
-            android:textSize="25sp" />
-
-        <TextView
-            android:id="@+id/marca"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="25dp"
-            android:text=""
-            android:textAppearance="?android:attr/textAppearanceMedium"
-            android:textSize="25sp" />
-    </TableRow>
-<TableRow
-        android:id="@+id/row5"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" >
-
-        <TextView
-            android:id="@+id/lblAcero"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="15dp"
-            android:text="@string/lbl_prod_bacha_acero"
-            android:textAppearance="?android:attr/textAppearanceMedium"
-            android:textSize="25sp" />
-
-        <TextView
-            android:id="@+id/acero"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="25dp"
-            android:text=""
-            android:textAppearance="?android:attr/textAppearanceMedium"
-            android:textSize="25sp" />
-    </TableRow>
-<TableRow
-        android:id="@+id/row6"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" >
-
-        <TextView
-            android:id="@+id/lblTipoBacha"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="15dp"
-            android:text="@string/lbl_prod_bacha_tipo"
-            android:textAppearance="?android:attr/textAppearanceMedium"
-            android:textSize="25sp" />
-
-        <TextView
-            android:id="@+id/tipoBacha"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="25dp"
-            android:text=""
-            android:textAppearance="?android:attr/textAppearanceMedium"
-            android:textSize="25sp" />
-    </TableRow>
         <TableRow
-        android:id="@+id/row7"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" >
-
-        <TextView
-            android:id="@+id/lblColocacion"
+            android:id="@+id/row3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="15dp"
-            android:text="@string/lbl_prod_bacha_colocacion"
-            android:textAppearance="?android:attr/textAppearanceMedium"
-            android:textSize="25sp" />
+            android:layout_marginTop="30dp" >
 
-        <TextView
-            android:id="@+id/colocacion"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="25dp"
-            android:text=""
-            android:textAppearance="?android:attr/textAppearanceMedium"
-            android:textSize="25sp" />
-    </TableRow>
+            <TextView
+                android:id="@+id/lblMaterial"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="15dp"
+                android:layout_marginRight="15dp"
+                android:text="@string/lbl_prod_tipo_material"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:textSize="25sp" />
+
+            <TextView
+                android:id="@+id/material"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="25dp"
+                android:text=""
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:textSize="25sp" />
+        </TableRow>
+
         <TableRow
-        android:id="@+id/row8"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" >
-
-        <TextView
-            android:id="@+id/lblLargo"
+            android:id="@+id/row4"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="15dp"
-            android:text="@string/lbl_prod_bacha_largo"
-            android:textAppearance="?android:attr/textAppearanceMedium"
-            android:textSize="25sp" />
+            android:layout_height="wrap_content" >
 
-        <TextView
-            android:id="@+id/bachaLargo"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="25dp"
-            android:text=""
-            android:textAppearance="?android:attr/textAppearanceMedium"
-            android:textSize="25sp" />
-    </TableRow> 
+            <TextView
+                android:id="@+id/lblMarca"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="15dp"
+                android:text="@string/lbl_prod_marca"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:textSize="25sp" />
+
+            <TextView
+                android:id="@+id/marca"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="25dp"
+                android:text=""
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:textSize="25sp" />
+        </TableRow>
+
         <TableRow
-        android:id="@+id/row9"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" >
-
-        <TextView
-            android:id="@+id/lblAncho"
+            android:id="@+id/row5"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="15dp"
-            android:text="@string/lbl_prod_bacha_ancho"
-            android:textAppearance="?android:attr/textAppearanceMedium"
-            android:textSize="25sp" />
+            android:layout_height="wrap_content" >
 
-        <TextView
-            android:id="@+id/bachaAncho"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="25dp"
-            android:text=""
-            android:textAppearance="?android:attr/textAppearanceMedium"
-            android:textSize="25sp" />
-    </TableRow>  
+            <TextView
+                android:id="@+id/lblAcero"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="15dp"
+                android:text="@string/lbl_prod_bacha_acero"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:textSize="25sp" />
+
+            <TextView
+                android:id="@+id/acero"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="25dp"
+                android:text=""
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:textSize="25sp" />
+        </TableRow>
+
         <TableRow
-        android:id="@+id/row10"
+            android:id="@+id/row6"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" >
+
+            <TextView
+                android:id="@+id/lblTipoBacha"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="15dp"
+                android:text="@string/lbl_prod_bacha_tipo"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:textSize="25sp" />
+
+            <TextView
+                android:id="@+id/tipoBacha"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="25dp"
+                android:text=""
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:textSize="25sp" />
+        </TableRow>
+    </TableLayout>
+    <View
+        android:id="@+id/sepProdThumb"
+        android:layout_width="4dp"
+        android:layout_height="match_parent"
+        android:layout_alignParentTop="true"
+        android:layout_marginLeft="15dp"
+        android:layout_marginRight="15dp"
+        android:layout_toRightOf="@id/photoContainer"
+        android:background="@color/actionbar_theme_color" />
+    <TableLayout
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" >
+        android:layout_height="match_parent" 
+        android:layout_marginTop="30dp" >
 
-        <TextView
-            android:id="@+id/lblProf"
+        <TableRow
+            android:id="@+id/row7"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="15dp"
-            android:text="@string/lbl_prod_bacha_prof"
-            android:textAppearance="?android:attr/textAppearanceMedium"
-            android:textSize="25sp" />
+            android:layout_height="wrap_content" >
 
-        <TextView
-            android:id="@+id/bachaProf"
+            <TextView
+                android:id="@+id/lblColocacion"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="15dp"
+                android:text="@string/lbl_prod_bacha_colocacion"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:textSize="25sp" />
+
+            <TextView
+                android:id="@+id/colocacion"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="25dp"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:textSize="25sp" />
+        </TableRow>
+
+        <TableRow
+            android:id="@+id/row8"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="25dp"
-            android:text=""
-            android:textAppearance="?android:attr/textAppearanceMedium"
-            android:textSize="25sp" />
-    </TableRow>           
-</TableLayout>
+            android:layout_height="wrap_content" >
+
+            <TextView
+                android:id="@+id/lblLargo"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="15dp"
+                android:text="@string/lbl_prod_bacha_largo"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:textSize="25sp" />
+
+            <TextView
+                android:id="@+id/bachaLargo"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="25dp"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:textSize="25sp" />
+        </TableRow>
+
+        <TableRow
+            android:id="@+id/row9"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" >
+
+            <TextView
+                android:id="@+id/lblAncho"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="15dp"
+                android:text="@string/lbl_prod_bacha_ancho"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:textSize="25sp" />
+
+            <TextView
+                android:id="@+id/bachaAncho"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="25dp"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:textSize="25sp" />
+        </TableRow>
+
+        <TableRow
+            android:id="@+id/row10"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" >
+
+            <TextView
+                android:id="@+id/lblProf"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="15dp"
+                android:text="@string/lbl_prod_bacha_prof"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:textSize="25sp" />
+
+            <TextView
+                android:id="@+id/bachaProf"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="25dp"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:textSize="25sp" />
+        </TableRow>
+    </TableLayout>
+
+</LinearLayout>
