--- a/AntonStockApp/res/layout/fragment_detail_insumo.xml
+++ b/AntonStockApp/res/layout/fragment_detail_insumo.xml
@@ -1,10 +1,12 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/RelativeLayout1"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_gravity="center_horizontal|center_vertical"
     android:orientation="vertical"
     tools:context="ar.com.antaresconsulting.antonstockapp.ProductDetailActivity" >
+
      <TextView
             android:id="@+id/lblDescripcion"
             android:layout_width="wrap_content"
