--- a/AntonStockApp/res/layout/fragment_detail_product.xml
+++ b/AntonStockApp/res/layout/fragment_detail_product.xml
@@ -13,8 +13,8 @@
 
         <ImageView
             android:id="@+id/productImg"
-            android:layout_width="250dp"
-            android:layout_height="250dp"
+            android:layout_width="200dp"
+            android:layout_height="200dp"
             android:layout_alignParentLeft="true"
             android:layout_alignParentTop="true"
             android:src="@drawable/ic_no_photo" />
@@ -22,8 +22,8 @@
         <Button
             android:id="@+id/takePhotoBtn"
             android:layout_width="match_parent"
-            android:layout_height="70dp"
-            android:layout_marginTop="250dp"
+            android:layout_height="50dp"
+            android:layout_marginTop="200dp"
             android:drawableLeft="@drawable/ic_take_photo"
             android:onClick="takePhoto"
             android:text="Sacar Foto" />
@@ -32,7 +32,7 @@
     <View
         android:id="@+id/sepProdThumb"
         android:layout_width="4dp"
-        android:layout_height="250dp"
+        android:layout_height="200dp"
         android:layout_alignParentTop="true"
         android:layout_marginLeft="15dp"
         android:layout_marginRight="30dp"
@@ -44,118 +44,141 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
-        android:layout_marginBottom="30dp"
+        android:layout_marginBottom="20dp"
+        android:layout_marginTop="20dp"
         android:layout_toRightOf="@+id/sepProdThumb"
         android:text="Nombre_Producto"
         android:textSize="30sp" />
-
-    <RelativeLayout
-        android:id="@+id/baseDetail"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/nombreProd"
-        android:layout_marginBottom="15dp"
-        android:layout_marginLeft="15dp"
-        android:layout_toRightOf="@id/sepProdThumb" >
-
-        <TextView
-            android:id="@+id/codeProd"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="15dp"
-            android:shadowColor="@color/abc_search_url_text_normal"
-            android:text="@string/lbl_prod_codigo"
-            android:textSize="25sp" />
-
-        <TextView
-            android:id="@+id/priceProd"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
-            android:layout_below="@id/codeProd"
-            android:layout_marginBottom="15dp"
-            android:shadowColor="@color/abc_search_url_text_normal"
-            android:text="@string/lbl_prod_precio"
-            android:textSize="25sp" />
-
-        <TextView
-            android:id="@+id/stockProd"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
-            android:layout_below="@id/priceProd"
-            android:layout_marginBottom="15dp"
-            android:shadowColor="@color/abc_search_url_text_normal"
-            android:text="@string/lbl_prod_stock"
-            android:textSize="25sp" />
-
-        <TextView
-            android:id="@+id/ean13"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
-            android:layout_below="@id/stockProd"
-            android:layout_marginBottom="15dp"
-            android:shadowColor="@color/abc_search_url_text_normal"
-            android:text="@string/lbl_prod_ean13"
-            android:textSize="25sp" />
-
-        <TextView
-            android:id="@+id/stockVal"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignBaseline="@+id/stockProd"
-            android:layout_alignBottom="@+id/stockProd"
-            android:layout_marginLeft="25dp"
-            android:layout_toRightOf="@+id/codeProd"
-            android:shadowColor="@color/abc_search_url_text_normal"
-            android:text="Stock Prod"
-            android:textSize="25sp" />
-
-        <TextView
-            android:id="@+id/codigoVal"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignBaseline="@+id/codeProd"
-            android:layout_alignBottom="@+id/codeProd"
-            android:layout_marginLeft="25dp"
-            android:layout_toRightOf="@+id/codeProd"
-            android:shadowColor="@color/abc_search_url_text_normal"
-            android:text="Codigo"
-            android:textSize="25sp" />
-
-        <TextView
-            android:id="@+id/precioVal"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignBaseline="@+id/priceProd"
-            android:layout_alignBottom="@+id/priceProd"
-            android:layout_marginLeft="25dp"
-            android:layout_toRightOf="@+id/codeProd"
-            android:shadowColor="@color/abc_search_url_text_normal"
-            android:text="Precio"
-            android:textSize="25sp" />
-
-        <TextView
-            android:id="@+id/eanVal"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignBaseline="@+id/ean13"
-            android:layout_alignBottom="@+id/ean13"
-            android:layout_marginLeft="25dp"
-            android:layout_toRightOf="@+id/codeProd"
-            android:shadowColor="@color/abc_search_url_text_normal"
-            android:text="EAN13"
-            android:textSize="25sp" />
-    </RelativeLayout>
 
     <FrameLayout
         android:id="@+id/productDetail"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/baseDetail"
-        android:layout_below="@+id/baseDetail"
-        >
+        android:layout_below="@id/nombreProd" >
+
     </FrameLayout>
+
+    <TableLayout
+        android:id="@+id/baseData"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/nombreProd"
+        android:layout_toRightOf="@+id/sepProdThumb" >
+
+        <TableRow
+            android:id="@+id/codRow"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="10dp" >
+
+            <TextView
+                android:id="@+id/codigo"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="20dp"
+                android:text="@string/lbl_prod_codigo"
+                android:textSize="25sp" />
+
+            <TextView
+                android:id="@+id/codigoVal"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Codigo"
+                android:textSize="25sp" />
+        </TableRow>
+
+        <TableRow
+            android:id="@+id/precioRow"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="10dp" >
+
+            <TextView
+                android:id="@+id/precio"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/lbl_prod_precio"
+                android:textSize="25sp" />
+
+            <TextView
+                android:id="@+id/precioVal"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Precio"
+                android:textSize="25sp" />
+        </TableRow>
+    </TableLayout>
+
+    <TableLayout
+        android:id="@+id/stockData"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/nombreProd"
+        android:layout_marginLeft="50dp"
+        android:layout_toRightOf="@+id/baseData" >
+
+        <TableRow
+            android:id="@+id/stockRealRow"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="10dp" >
+
+            <TextView
+                android:id="@+id/cantStock"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/lbl_prod_stockR"
+                android:textSize="25sp" />
+
+            <TextView
+                android:id="@+id/stockRVal"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Cantidad"
+                android:textSize="25sp" />
+        </TableRow>
+
+        <TableRow
+            android:id="@+id/stockFRow"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="10dp" >
+
+            <TextView
+                android:id="@+id/cantStockF"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/lbl_prod_stockF"
+                android:textSize="25sp" />
+
+            <TextView
+                android:id="@+id/stockFVal"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Cantidad"
+                android:textSize="25sp" />
+        </TableRow>
+
+        <TableRow
+            android:id="@+id/stockIRow"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="10dp" >
+
+            <TextView
+                android:id="@+id/cantStockI"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/lbl_prod_stockI"
+                android:textSize="25sp" />
+
+            <TextView
+                android:id="@+id/stockIVal"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Cantidad"
+                android:textSize="25sp" />
+        </TableRow>
+    </TableLayout>
 
 </RelativeLayout>
