--- a/AntonStockApp/res/layout/listitem_product.xml
+++ b/AntonStockApp/res/layout/listitem_product.xml
@@ -32,69 +32,6 @@
         android:text="Nombre Prod"
         android:textSize="25sp" />
 
-    <TextView
-        android:id="@+id/codigo"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="false"
-        android:layout_below="@id/nombreProd"
-        android:layout_margin="5dp"
-        android:layout_toRightOf="@id/sepProdThumb"
-        android:text="@string/lbl_prod_codigo"
-        android:textSize="15sp" />
-
-    <TextView
-        android:id="@+id/precio"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="false"
-        android:layout_below="@id/codigo"
-        android:layout_margin="5dp"
-        android:layout_toRightOf="@id/sepProdThumb"
-        android:text="@string/lbl_prod_precio"
-        android:textSize="15sp" />
-
-    <TextView
-        android:id="@+id/cantStock"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="false"
-        android:layout_below="@+id/precio"
-        android:layout_margin="5dp"
-        android:layout_toRightOf="@id/sepProdThumb"
-        android:text="@string/lbl_prod_stock"
-        android:textSize="15sp" />
-
-    <TextView
-        android:id="@+id/precioVal"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignBaseline="@+id/precio"
-        android:layout_alignBottom="@+id/precio"
-        android:layout_toRightOf="@+id/codigo"
-        android:text="Precio"
-        android:textSize="15sp" />
-
-    <TextView
-        android:id="@+id/codigoVal"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignBaseline="@+id/codigo"
-        android:layout_alignBottom="@+id/codigo"
-        android:layout_alignLeft="@+id/precioVal"
-        android:text="Codigo"
-        android:textSize="15sp" />
-
-    <TextView
-        android:id="@+id/stockVal"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignBaseline="@+id/cantStock"
-        android:layout_alignBottom="@+id/cantStock"
-        android:layout_alignLeft="@+id/precioVal"
-        android:text="Cantidad"
-        android:textSize="15sp" />
-
     <CheckBox
         android:id="@+id/checkBox1"
         android:layout_width="wrap_content"
@@ -106,4 +43,115 @@
         android:focusable="false"
         android:text="" />
 
+    <TableLayout
+        android:id="@+id/baseData"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/nombreProd"
+        android:layout_below="@+id/checkBox1" >
+
+        <TableRow
+            android:id="@+id/codRow"
+            android:layout_width="wrap_content"
+            android:layout_marginBottom="10dp"
+            android:layout_height="wrap_content" >
+
+            <TextView
+                android:id="@+id/codigo"
+                android:layout_width="wrap_content"
+                android:layout_marginRight="20dp"
+                android:layout_height="wrap_content"
+                android:text="@string/lbl_prod_codigo"
+                android:textSize="15sp" />
+
+            <TextView
+                android:id="@+id/codigoVal"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Codigo"
+                android:textSize="15sp" />
+        </TableRow>
+
+        <TableRow
+            android:id="@+id/precioRow"
+            android:layout_marginBottom="10dp"            
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" >
+
+            <TextView
+                android:id="@+id/precio"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/lbl_prod_precio"
+                android:textSize="15sp" />
+
+            <TextView
+                android:id="@+id/precioVal"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Precio"
+                android:textSize="15sp" />
+        </TableRow>
+
+        <TableRow
+            android:id="@+id/stockRealRow"
+            android:layout_marginBottom="10dp"            
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" >
+
+            <TextView
+                android:id="@+id/cantStock"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/lbl_prod_stockR"
+                android:textSize="15sp" />
+
+            <TextView
+                android:id="@+id/stockRVal"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Cantidad"
+                android:textSize="15sp" />
+        </TableRow>
+        <TableRow
+            android:id="@+id/stockFRow"
+            android:layout_marginBottom="10dp"            
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" >
+
+            <TextView
+                android:id="@+id/cantStock"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/lbl_prod_stockF"
+                android:textSize="15sp" />
+
+            <TextView
+                android:id="@+id/stockFVal"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Cantidad"
+                android:textSize="15sp" />
+        </TableRow>
+        <TableRow
+            android:id="@+id/stockIRow"
+            android:layout_marginBottom="10dp"            
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" >
+
+            <TextView
+                android:id="@+id/cantStock"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/lbl_prod_stockI"
+                android:textSize="15sp" />
+
+            <TextView
+                android:id="@+id/stockIVal"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Cantidad"
+                android:textSize="15sp" />
+        </TableRow>                
+    </TableLayout>
 </RelativeLayout>
