--- a/AntonStockApp/res/menu/in_products.xml
+++ b/AntonStockApp/res/menu/in_products.xml
@@ -2,7 +2,14 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="ar.com.antaresconsulting.antonstockapp.InProducts" >
-
+    <item
+        android:id="@+id/add_pm_search"
+        android:orderInCategory="100"
+        android:title="@string/action_add_pm_search"
+        android:icon="@drawable/ic_common_search"
+        android:onClick="searchPM"
+        android:visible="false"
+        android:showAsAction="always|withText"/>
     <item
         android:id="@+id/save_incoming"
         android:orderInCategory="100"
