--- a/AntonStockApp/res/values/strings_product.xml
+++ b/AntonStockApp/res/values/strings_product.xml
@@ -7,7 +7,9 @@
     <string name="lbl_prod_uom">Tipo de Unidad :</string>
     <string name="lbl_prod_desc">Descripcion :</string>
     <string name="lbl_prod_precio">Precio :</string>
-    <string name="lbl_prod_stock">Stock :</string>
+    <string name="lbl_prod_stockR">St. Deposito :</string>
+    <string name="lbl_prod_stockF">St. Previsto :</string>
+    <string name="lbl_prod_stockI">St. Ingresando :</string>
     <string name="lbl_prod_tipo_material">Tipo de Material :</string>
     <string name="lbl_prod_acabado">Acabado :</string>
     <string name="lbl_prod_espesor">Espesor :</string>
