--- a/AntonStockApp/res/values/strings_product.xml
+++ b/AntonStockApp/res/values/strings_product.xml
@@ -22,6 +22,7 @@
     <string name="lbl_prod_bacha_largo">Largo :</string>
     <string name="lbl_prod_bacha_prof">Profundidad :</string>    
     <string name="lbl_prod_bacha_diametro">Diametro :</string>
+    <string name="lbl_prod_stock_adjust">Ajustar Stock</string>
     <string name="title_forstock">Producto Materias Primas</string>
     <string name="title_expenses">Producto Insumos</string>
     <string name="title_bachas">Producto Bachas</string>
