--- a/AntonStockApp/res/layout/activity_reenter_products.xml
+++ b/AntonStockApp/res/layout/activity_reenter_products.xml
@@ -93,7 +93,7 @@
                                 android:layout_height="wrap_content"
                                 android:layout_weight="1"
                                 android:gravity="center_horizontal"
-                                android:text="@string/in_prod_largo"
+                                android:text="@string/lbl_prod_largo"
                                 android:textAppearance="?android:attr/textAppearanceSmall" />
 
                             <EditText
@@ -112,7 +112,7 @@
                                 android:layout_height="wrap_content"
                                 android:layout_weight="1"
                                 android:gravity="center_horizontal"
-                                android:text="@string/in_prod_unidad"
+                                android:text="@string/lbl_prod_unidad"
                                 android:textAppearance="?android:attr/textAppearanceSmall" />
 
                             <TextView
@@ -121,7 +121,7 @@
                                 android:layout_height="wrap_content"
                                 android:layout_weight="1"
                                 android:gravity="center_horizontal"
-                                android:text="@string/in_prod_ancho"
+                                android:text="@string/lbl_prod_ancho"
                                 android:textAppearance="?android:attr/textAppearanceSmall" />
 
                             <EditText
@@ -139,7 +139,7 @@
                                 android:layout_height="wrap_content"
                                 android:layout_weight="1"
                                 android:gravity="center_horizontal"
-                                android:text="@string/in_prod_unidad"
+                                android:text="@string/lbl_prod_unidad"
                                 android:textAppearance="?android:attr/textAppearanceSmall" />
 
                             <TextView
@@ -148,7 +148,7 @@
                                 android:layout_height="wrap_content"
                                 android:layout_weight="1"
                                 android:gravity="center_horizontal"
-                                android:text="@string/in_prod_espesor"
+                                android:text="@string/lbl_prod_espesor"
                                 android:textAppearance="?android:attr/textAppearanceSmall" />
 
                             <Spinner
@@ -207,7 +207,7 @@
     </LinearLayout>
 
     <LinearLayout
-        android:id="@+id/LinearLayout1"
+        android:id="@+id/LinearLayout12"
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_weight="4"
